--- a/project-detail.html
+++ b/project-detail.html
@@ -20,8 +20,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&amp;display=swap" rel="stylesheet">
   </head><!-- End Google Tag Manager -->
   <title>Linked | Project Detail</title><!- SLIDER -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" defer>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js" defer></script>
+  <script type="text/javascript" src="js/lightbox.min.min.js" defer></script>
   <script src="js/sliders.min.js" defer></script>
   <script src="js/animaciones-detail-project.min.js" defer></script>
   <script src="js/nav.min.js" defer></script>
@@ -29,16 +31,27 @@
     <header class="header">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-6 col-lg-2 header--logo"><a href="../"><img class="img-fluid logo-header" src="img/logo-linked-blanco.svg" alt></a></div>
+          <div class="col-6 col-lg-2 header--logo"><a href="./"><img class="img-fluid logo-header" src="img/logo-linked-blanco.svg" alt></a></div>
           <div class="col-lg-10 col-6 header--navegacion d-flex">
             <nav>
+              <button class="btn-search" data-bs-toggle="collapse" data-bs-target="#searchNav" aria-controls="searchNavContent" aria-expanded="false" aria-label="Toggle navigation"></button>
               <div class="btn-ham" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="ham-top"></span><span class="ham-btm"></span></div>
+              <div class="collapse navbar-collapse" id="searchNav">
+                <div class="container container--search">
+                  <div class="col-lg-9 input__group input-search">
+                    <label>found something interesting</label>
+                    <div class="input-search--wrap">
+                      <input id="input-search" type="search" name="search" placeholder="there are many ways you could know what we do">
+                      <button class="btn-search"></button>
+                    </div>
+                  </div>
+                  <h1>are you seeking for something special?</h1>
+                </div>
+              </div>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul><a id="li-projects" href="projects.html">
-                    <li>Projects<sup>(100)</sup></li></a><a id="li-writing" href="writing.html">
-                    <li>Writing<sup>(100)</sup></li></a><a id="li-about" href="about.html">
-                    <li>About<sup>(100)</sup></li></a><a id="li-teaching" href="teaching.html">
-                    <li>Teaching<sup>(100)</sup></li></a></ul>
+                    <li>Projects<sup>(100)</sup></li></a><a id="li-about" href="about.html">
+                    <li>About<sup>(100)</sup></li></a></ul>
               </div>
             </nav>
           </div>
@@ -105,10 +118,7 @@
         </div>
       </section>
       <div class="container-fluid">
-        <p class="projects__quotes">
-          The capacity to maintain or improve the state and availability of desirable materials or conditions over the long terms into environments.
-          
-        </p>
+        <p class="projects__quotes">The capacity to maintain or improve the state and availability of desirable materials or conditions over the long terms into environments.</p>
       </div>
       <section class="gallery">
         <div class="container">
@@ -116,19 +126,19 @@
             <div class="col-12">
               <div class="swiper slider-detail">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide"><a href=""> 
-                      <picture><img class="img-fluid" src="img/layout5.jpg" alt></picture></a><a href=""> 
-                      <picture><img class="img-fluid" src="img/layout2.jpg" alt></picture></a><a href=""> 
-                      <picture><img class="img-fluid" src="img/layout3.jpg" alt></picture></a><a href=""> 
-                      <picture><img class="img-fluid" src="img/layout.jpg" alt></picture></a><a href=""> 
-                      <picture><img class="img-fluid" src="img/layout4.jpg" alt></picture></a><a href=""> 
+                  <div class="swiper-slide"><a href="img/layout6.jpg" data-lightbox="galeria-desktop">
+                      <picture><img class="img-fluid" src="img/layout5.jpg" alt></picture></a><a href="img/layout6.jpg" data-lightbox="galeria-desktop">
+                      <picture><img class="img-fluid" src="img/layout2.jpg" alt></picture></a><a href="img/layout6.jpg" data-lightbox="galeria-desktop">
+                      <picture><img class="img-fluid" src="img/layout3.jpg" alt></picture></a><a href="img/layout6.jpg" data-lightbox="galeria-desktop">
+                      <picture><img class="img-fluid" src="img/layout.jpg" alt></picture></a><a href="img/layout6.jpg" data-lightbox="galeria-desktop">
+                      <picture><img class="img-fluid" src="img/layout4.jpg" alt></picture></a><a href="img/layout6.jpg" data-lightbox="galeria-desktop">
                       <picture><img class="img-fluid" src="img/layout6.jpg" alt></picture></a></div>
-                  <div class="swiper-slide"><a href=""> 
-                      <picture><img class="img-fluid" src="img/layout5.jpg" alt></picture></a><a href=""> 
-                      <picture><img class="img-fluid" src="img/layout2.jpg" alt></picture></a><a href=""> 
-                      <picture><img class="img-fluid" src="img/layout3.jpg" alt></picture></a><a href=""> 
-                      <picture><img class="img-fluid" src="img/layout.jpg" alt></picture></a><a href=""> 
-                      <picture><img class="img-fluid" src="img/layout4.jpg" alt></picture></a><a href=""> 
+                  <div class="swiper-slide"><a href="img/layout6.jpg" data-lightbox="galeria-desktop">
+                      <picture><img class="img-fluid" src="img/layout5.jpg" alt></picture></a><a href="img/layout6.jpg" data-lightbox="galeria-desktop">
+                      <picture><img class="img-fluid" src="img/layout2.jpg" alt></picture></a><a href="img/layout6.jpg" data-lightbox="galeria-desktop">
+                      <picture><img class="img-fluid" src="img/layout3.jpg" alt></picture></a><a href="img/layout6.jpg" data-lightbox="galeria-desktop">
+                      <picture><img class="img-fluid" src="img/layout.jpg" alt></picture></a><a href="img/layout6.jpg" data-lightbox="galeria-desktop">
+                      <picture><img class="img-fluid" src="img/layout4.jpg" alt></picture></a><a href="img/layout6.jpg" data-lightbox="galeria-desktop">
                       <picture><img class="img-fluid" src="img/layout6.jpg" alt></picture></a></div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -238,10 +248,55 @@
           </div>
         </div>
       </section>
-      <footer class="footer"><a class="col-lg-4 col-12 footer--connect" href="connect.html">
-          <h5>CONNECT</h5></a></footer>
     </main>
-    <footer class="footer"><a class="col-lg-4 col-12 footer--connect" href="connect.html">
-        <h5>CONNECT</h5></a></footer>
+    <footer class="footer">
+      <div class="col-lg-4 col-12 footer--connect" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        <button>CONNECT</button>
+      </div>
+    </footer>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-fullscreen modal-dialog-scrollable">
+        <div class="modal-content connect">
+          <div class="col-6 col-lg-2 header--logo"><a href="../"><img class="img-fluid logo-header" src="img/logo-linked-blanco.svg" alt></a></div>
+          <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+          <div class="modal-body"> 
+            <div class="container-xl"> 
+              <div class="row"> 
+                <div class="col-lg-4 connect--title">
+                  <h1>what can<br>we do <br>together</h1>
+                  <h5 class="connect--disclaimer">By submitting this form, I agree to receive communications from linked in connection with my inquiry. My information will be processed in accordance with linked’s <a href="">Privacy Policy.</a></h5>
+                </div>
+                <div class="col-lg-4 connect--form">
+                  <form id="form-contacto" action="" method="post">
+                    <div class="input__group"><span>
+                        <input id="input-name" type="text" name="" placeholder="FULL NAME" required></span>
+                      <label>Nombre</label><span class="error-input">Campo requerido</span>
+                    </div>
+                    <div class="input__group"><span>
+                        <input id="input-email" type="text" name="" placeholder="ENTER A VALID NAME" required></span>
+                      <label>Email*</label><span class="error-input">Campo requerido</span>
+                    </div>
+                    <div class="input__group"><span>
+                        <input id="input-phone" type="text" name="" placeholder="VALID PHONE NUMBER W/ DIALING CODE" required></span>
+                      <label>Phone number</label><span class="error-input">Campo requerido</span>
+                    </div>
+                    <div class="input__group"><span>
+                        <input id="input-country" type="text" name="" placeholder="WHERE ARE YOU COME FROM?" required></span>
+                      <label>Country*</label><span class="error-input">Campo requerido</span>
+                    </div>
+                    <div class="input__group"><span>
+                        <textarea id="msj-contacto" placeholder="DESCRIBE YOUR IDEA"></textarea></span>
+                      <label>MESSAGE*</label>
+                      <h6 class="error-input">*Campo requerido</h6>
+                    </div>
+                    <button class="boton big sec" id="btn-connect" type="submit">SEND IT</button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
